Add library (lightsaml) for the OKta Saml Implementation

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "onelogin/php-saml": "^4.1",
         "litesaml/lightsaml": "^v4.2.0",
         "php": ">=7.0",
-        "illuminate/support": ">=5.4"
+        "illuminate/support": ">=5.4",
+        "ext-json": "*"
     },
     "extra": {
         "laravel": {
